--- a/Alura Books/index.html
+++ b/Alura Books/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alura Books</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="reset.css">
-  <title>Alura Books</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         <li class="lista-menu__item">
           <a href="#" class="lista-menu__link">Programação</a>
         </li>
-        <li class="lista-menu__item">R
+        <li class="lista-menu__item">
           <a href="#" class="lista-menu__link">Front-end</a>
         </li>
         <li class="lista-menu__item">
